[gd_scene load_steps=3 format=3 uid="uid://bkqfe3f3rwa8g"]

[ext_resource type="Script" path="res://nodes/build_kits/scripts/builder_node.gd" id="1_okeps"]

[sub_resource type="SphereShape3D" id="SphereShape3D_b7iyo"]
radius = 0.1

[node name="BuilderNode" type="Node3D"]
script = ExtResource("1_okeps")

[node name="BuilderRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
target_position = Vector3(0, 0, -15)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="BarrierDetector" type="Area3D" parent="."]
collision_layer = 268435456
collision_mask = 268435456

[node name="CollisionShape3D" type="CollisionShape3D" parent="BarrierDetector"]
shape = SubResource("SphereShape3D_b7iyo")

[connection signal="can_place_status_changed" from="." to="." method="_on_can_place_status_changed"]
